force-app/main/default/objects/Stock_Movement__c/Stock_Movement__c.object-meta.xml
<CustomObject>
    <label>Stock Movement</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Movement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>