force-app/main/default/objects/Stock_Movement__c/fields/Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date__c</fullName>
    <label>Movement Date</label>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>