force-app/main/default/objects/Stock_Movement__c/fields/Movement_Type__c.field-meta.xml
<CustomField>
    <fullName>Movement_Type__c</fullName>
    <label>Movement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
                <default>true</default>
                <label>Sale</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Restock</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>