force-app/main/default/objects/Stock_Movement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
    <description>Free text — e.g. the reason behind a manual Adjustment.</description>
</CustomField>