force-app/main/default/objects/Stock_Movement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Movements</relationshipLabel>
    <relationshipName>Stock_Movements</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which product this movement changed the stock of. Not enforced as schema-required because Product2 doesn't allow a Restrict/Cascade delete constraint on lookups pointing to it (a platform rule, not a choice made here) — the only delete constraint Salesforce accepts here is SetNull, which in turn cannot be combined with required=true. InventoryService always populates this on every row it creates regardless.</description>
</CustomField>