force-app/main/default/objects/Stock_Movement__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
    <description>Signed change to Stock_Quantity__c this row represents — negative for Sale, positive for Restock/Cancellation, either sign for a manual Adjustment.</description>
</CustomField>