force-app/main/default/objects/Stock_Movement__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Stock Movements</relationshipLabel>
    <relationshipName>Stock_Movements</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set for Sale and Cancellation movements — which order caused this stock change. Blank for Restock/Adjustment movements.</description>
</CustomField>