force-app/main/default/objects/Stock_Movement__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <label>Balance After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Snapshot of Product2.Stock_Quantity__c immediately after this movement was applied. Exact for a single-order movement; when a bulk trigger batch restores stock for more than one order against the same product in the same transaction, this reflects the batch's final balance rather than each row's own intermediate step — an accepted simplification for a rare edge case.</description>
</CustomField>